#1882 Fixed images becoming gigantic when captions are large, unbroken single strings. Changed behavior so that when disabling text wrapping, the caption is not replaced by the wrapped text.

--- a/packages/obonode/obojobo-chunks-figure/editor-component.scss
+++ b/packages/obonode/obojobo-chunks-figure/editor-component.scss
@@ -84,6 +84,10 @@
 		}
 	}
 
+	figcaption {
+		word-break: break-all;
+	}
+
 	.text-chunk {
 		text-align: justify;
 	}
